# stowsave

./: Cargo.toml  README.md  justfile
.github/workflows/: cargo-bump.yaml  publish.yaml  rust_build_test.yaml
src/: checks.rs  command.rs  command_impl.rs  main.rs  util.rs
tests/: e2e_tests.rs
